# Z-polls

./: .gitattributes  .gitignore  .gitpod.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: django.yml
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: login.html  logout.html  register.html
mysite/: settings.py  urls.py
polls/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_auto_20200811_2027.py
polls/static/polls/: styles.css
polls/templates/: base.html
polls/templates/accounts/: logout.html
polls/templates/polls/: add_choices.html  add_questions.html  detail.html  index.html  new_question.html  results.html
static/polls/: styles.css
