[tool.poetry]
name = "z-polls"
version = "0.1.0"
description = ""
authors = ["IgnisDa <diptesh.choudhuri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
django-crispy-forms = "^1.9.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
